--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>graphql-jwt-auth</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Optimal Internet Explorer compatibility -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
