--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   </head>
-  <body class="sidebar-minimized brand-minimized">
+  <body class="bg-white dark:bg-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
